--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@types/elasticsearch": "^5.0.36",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "elasticsearch": "^16.7.1",
+    "moment": "^2.29.1",
     "nestjs-easyconfig": "^2.0.11",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
